--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,6 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
-    "dotenv": "^17.3.1",
     "nodemon": "^3.1.14",
     "prisma": "^7.4.1",
     "ts-node": "^10.9.2",
@@ -28,6 +27,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
